--- a/archives/toutiao-search/2023-10-18.md
+++ b/archives/toutiao-search/2023-10-18.md
@@ -1,60 +1,81 @@
 # 2023-10-18
 
-共 287 条
+共 305 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Oct 18 2023 18:00:45 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Oct 18 2023 19:00:39 GMT+0800 (China Standard Time) -->
 1. [普京访华的安保级别有多高](https://so.toutiao.com/search?keyword=普京访华的安保级别有多高)
 1. [“一带一路”晚宴菜单](https://so.toutiao.com/search?keyword=“一带一路”晚宴菜单)
 1. [前三季度中国GDP同比增长5.2%](https://so.toutiao.com/search?keyword=前三季度中国GDP同比增长5.2%)
-1. [曝威马仅剩817人 已停发工资4个月](https://so.toutiao.com/search?keyword=曝威马仅剩817人+已停发工资4个月)
-1. [各国记者“堆成山”抓拍普京出场](https://so.toutiao.com/search?keyword=各国记者“堆成山”抓拍普京出场)
+1. [普京抵达北京哪些信息值得关注](https://so.toutiao.com/search?keyword=普京抵达北京哪些信息值得关注)
+1. [街道办：咬伤女童黑狗主人愿意赔偿](https://so.toutiao.com/search?keyword=街道办：咬伤女童黑狗主人愿意赔偿)
 1. [加沙医院被空袭引发愤怒 拜登发声](https://so.toutiao.com/search?keyword=加沙医院被空袭引发愤怒+拜登发声)
-1. [普京称为一带一路取得成就感到高兴](https://so.toutiao.com/search?keyword=普京称为一带一路取得成就感到高兴)
+1. [四川又一恶犬追咬2名幼童](https://so.toutiao.com/search?keyword=四川又一恶犬追咬2名幼童)
+1. [直击：郑州城管巡查未拴绳养狗行为](https://so.toutiao.com/search?keyword=直击：郑州城管巡查未拴绳养狗行为)
+1. [狂犬病潜伏期长达十几年？假的](https://so.toutiao.com/search?keyword=狂犬病潜伏期长达十几年？假的)
 1. [全网拉布拉多都在进行安全教育](https://so.toutiao.com/search?keyword=全网拉布拉多都在进行安全教育)
-1. [癌症高发是洗洁精惹的祸？假的](https://so.toutiao.com/search?keyword=癌症高发是洗洁精惹的祸？假的)
-1. [于和伟晒自拍“显摆”手机](https://so.toutiao.com/search?keyword=于和伟晒自拍“显摆”手机)
 1. [伊朗政府强烈谴责加沙医院被袭事件](https://so.toutiao.com/search?keyword=伊朗政府强烈谴责加沙医院被袭事件)
 1. [巴勒斯坦：我们的人民不下跪不投降](https://so.toutiao.com/search?keyword=巴勒斯坦：我们的人民不下跪不投降)
-1. [朔尔茨准备飞离以时发生火箭弹袭击](https://so.toutiao.com/search?keyword=朔尔茨准备飞离以时发生火箭弹袭击)
+1. [《新闻联播》正在直播](https://so.toutiao.com/search?keyword=《新闻联播》正在直播)
 1. [加沙医院遭袭已致700人死亡](https://so.toutiao.com/search?keyword=加沙医院遭袭已致700人死亡)
-1. [媒体：巴以冲突或引发文化遗产灾难](https://so.toutiao.com/search?keyword=媒体：巴以冲突或引发文化遗产灾难)
+1. [朔尔茨准备飞离以时发生火箭弹袭击](https://so.toutiao.com/search?keyword=朔尔茨准备飞离以时发生火箭弹袭击)
 1. [84岁钢琴家刘诗昆再当爸](https://so.toutiao.com/search?keyword=84岁钢琴家刘诗昆再当爸)
 1. [加沙医院被导弹击中瞬间曝光](https://so.toutiao.com/search?keyword=加沙医院被导弹击中瞬间曝光)
-1. [巴勒斯坦要求以结束对加沙军事行动](https://so.toutiao.com/search?keyword=巴勒斯坦要求以结束对加沙军事行动)
 1. [王祖贤南京游玩被偶遇](https://so.toutiao.com/search?keyword=王祖贤南京游玩被偶遇)
-1. [加沙医院遭袭后巴勒斯坦内部现冲突](https://so.toutiao.com/search?keyword=加沙医院遭袭后巴勒斯坦内部现冲突)
+1. [第一视角走进普京总统飞机抵达现场](https://so.toutiao.com/search?keyword=第一视角走进普京总统飞机抵达现场)
+1. [各国记者“堆成山”抓拍普京出场](https://so.toutiao.com/search?keyword=各国记者“堆成山”抓拍普京出场)
+1. [曝威马仅剩817人 已停发工资4个月](https://so.toutiao.com/search?keyword=曝威马仅剩817人+已停发工资4个月)
 1. [男子走失25年回家：我不值100万](https://so.toutiao.com/search?keyword=男子走失25年回家：我不值100万)
+1. [伊朗呼吁伊斯兰国家“抵制以色列”](https://so.toutiao.com/search?keyword=伊朗呼吁伊斯兰国家“抵制以色列”)
+1. [郑州城市建成区禁养犬只名单](https://so.toutiao.com/search?keyword=郑州城市建成区禁养犬只名单)
+1. [于和伟晒自拍“显摆”手机](https://so.toutiao.com/search?keyword=于和伟晒自拍“显摆”手机)
+1. [9月份居民消费价格CPI同比持平](https://so.toutiao.com/search?keyword=9月份居民消费价格CPI同比持平)
+1. [德担忧欧盟对中国电动汽车加征关税](https://so.toutiao.com/search?keyword=德担忧欧盟对中国电动汽车加征关税)
+1. [父女俩时隔4个月相继成为大体老师](https://so.toutiao.com/search?keyword=父女俩时隔4个月相继成为大体老师)
+1. [官员寡廉鲜耻搞权色交易被双开](https://so.toutiao.com/search?keyword=官员寡廉鲜耻搞权色交易被双开)
+1. [前三季全国固定资产投资375035亿元](https://so.toutiao.com/search?keyword=前三季全国固定资产投资375035亿元)
+1. [100元吃遍东北早市博主道歉](https://so.toutiao.com/search?keyword=100元吃遍东北早市博主道歉)
+1. [巴勒斯坦要求以结束对加沙军事行动](https://so.toutiao.com/search?keyword=巴勒斯坦要求以结束对加沙军事行动)
+1. [我国发布海浪和风暴潮蓝色警报](https://so.toutiao.com/search?keyword=我国发布海浪和风暴潮蓝色警报)
+1. [比亚迪追尾特斯拉：疑遭中指嘲讽](https://so.toutiao.com/search?keyword=比亚迪追尾特斯拉：疑遭中指嘲讽)
+1. [又一象棋大师举报“棋坛乱象”](https://so.toutiao.com/search?keyword=又一象棋大师举报“棋坛乱象”)
+1. [普京：俄中贸易将突破2000亿美元](https://so.toutiao.com/search?keyword=普京：俄中贸易将突破2000亿美元)
+1. [美媒：中东国家给布林肯上了一课](https://so.toutiao.com/search?keyword=美媒：中东国家给布林肯上了一课)
+1. [今年第16号台风“三巴”生成](https://so.toutiao.com/search?keyword=今年第16号台风“三巴”生成)
+1. [孩子被狗追逐怎么办](https://so.toutiao.com/search?keyword=孩子被狗追逐怎么办)
+1. [民众党若二选一就不必谈？侯办澄清](https://so.toutiao.com/search?keyword=民众党若二选一就不必谈？侯办澄清)
+1. [合肥：宠物狗出门不拴绳一律捕捉](https://so.toutiao.com/search?keyword=合肥：宠物狗出门不拴绳一律捕捉)
+1. [女子牵大型犬吓到小孩 家长欲砸狗](https://so.toutiao.com/search?keyword=女子牵大型犬吓到小孩+家长欲砸狗)
+1. [德国总理朔尔茨走红毯“迷路了”](https://so.toutiao.com/search?keyword=德国总理朔尔茨走红毯“迷路了”)
+1. [宿舍有人做饭学校拆除所有插排插孔](https://so.toutiao.com/search?keyword=宿舍有人做饭学校拆除所有插排插孔)
+1. [多地土拍重回“价高者得”的时代](https://so.toutiao.com/search?keyword=多地土拍重回“价高者得”的时代)
+1. [四川泸州原副市长违纪违法案剖析](https://so.toutiao.com/search?keyword=四川泸州原副市长违纪违法案剖析)
+1. [兽医称从业10年仍害怕罗威纳犬](https://so.toutiao.com/search?keyword=兽医称从业10年仍害怕罗威纳犬)
+1. [华为手机整体销量超越苹果](https://so.toutiao.com/search?keyword=华为手机整体销量超越苹果)
+1. [特斯拉车主多次别停他人 律师解读](https://so.toutiao.com/search?keyword=特斯拉车主多次别停他人+律师解读)
+1. [媒体：世界运转的格局变了](https://so.toutiao.com/search?keyword=媒体：世界运转的格局变了)
+1. [普京称为一带一路取得成就感到高兴](https://so.toutiao.com/search?keyword=普京称为一带一路取得成就感到高兴)
+1. [癌症高发是洗洁精惹的祸？假的](https://so.toutiao.com/search?keyword=癌症高发是洗洁精惹的祸？假的)
+1. [媒体：巴以冲突或引发文化遗产灾难](https://so.toutiao.com/search?keyword=媒体：巴以冲突或引发文化遗产灾难)
+1. [加沙医院遭袭后巴勒斯坦内部现冲突](https://so.toutiao.com/search?keyword=加沙医院遭袭后巴勒斯坦内部现冲突)
 1. [女子买鞋褪色脚被染黑](https://so.toutiao.com/search?keyword=女子买鞋褪色脚被染黑)
 1. [中方就人权问题点名美英获多国支持](https://so.toutiao.com/search?keyword=中方就人权问题点名美英获多国支持)
-1. [宿舍有人做饭学校拆除所有插排插孔](https://so.toutiao.com/search?keyword=宿舍有人做饭学校拆除所有插排插孔)
-1. [普京：俄中贸易将突破2000亿美元](https://so.toutiao.com/search?keyword=普京：俄中贸易将突破2000亿美元)
 1. [官方回应女子借社区中心厕所遭辱骂](https://so.toutiao.com/search?keyword=官方回应女子借社区中心厕所遭辱骂)
 1. [塞尔维亚大使：塞和中国是铁杆朋友](https://so.toutiao.com/search?keyword=塞尔维亚大使：塞和中国是铁杆朋友)
 1. [为什么年轻人不想要亲密关系](https://so.toutiao.com/search?keyword=为什么年轻人不想要亲密关系)
-1. [德国总理朔尔茨走红毯“迷路了”](https://so.toutiao.com/search?keyword=德国总理朔尔茨走红毯“迷路了”)
 1. [普京称美国政治精英需学会尊重他人](https://so.toutiao.com/search?keyword=普京称美国政治精英需学会尊重他人)
-1. [100元吃遍东北早市博主道歉](https://so.toutiao.com/search?keyword=100元吃遍东北早市博主道歉)
-1. [比亚迪追尾特斯拉：疑遭中指嘲讽](https://so.toutiao.com/search?keyword=比亚迪追尾特斯拉：疑遭中指嘲讽)
 1. [统计局：四季度消费将延续向好态势](https://so.toutiao.com/search?keyword=统计局：四季度消费将延续向好态势)
 1. [煮饺子要不要加凉水](https://so.toutiao.com/search?keyword=煮饺子要不要加凉水)
 1. [北京延庆区政协原副主席被双开](https://so.toutiao.com/search?keyword=北京延庆区政协原副主席被双开)
 1. [美大学因未谴责哈马斯被基金会断供](https://so.toutiao.com/search?keyword=美大学因未谴责哈马斯被基金会断供)
 1. [梅西边路戏耍防守球员上演神级摆脱](https://so.toutiao.com/search?keyword=梅西边路戏耍防守球员上演神级摆脱)
 1. [哈萨克斯坦总统用中文致辞](https://so.toutiao.com/search?keyword=哈萨克斯坦总统用中文致辞)
-1. [又一象棋大师举报“棋坛乱象”](https://so.toutiao.com/search?keyword=又一象棋大师举报“棋坛乱象”)
 1. [前三季居民人均可支配收入29398元](https://so.toutiao.com/search?keyword=前三季居民人均可支配收入29398元)
-1. [四川又一恶犬追咬2名幼童](https://so.toutiao.com/search?keyword=四川又一恶犬追咬2名幼童)
 1. [共建“一带一路”中的香港新机遇](https://so.toutiao.com/search?keyword=共建“一带一路”中的香港新机遇)
-1. [孩子被狗追逐怎么办](https://so.toutiao.com/search?keyword=孩子被狗追逐怎么办)
-1. [美媒：中东国家给布林肯上了一课](https://so.toutiao.com/search?keyword=美媒：中东国家给布林肯上了一课)
 1. [扶杨紫的小姐姐撞进了邓为怀里](https://so.toutiao.com/search?keyword=扶杨紫的小姐姐撞进了邓为怀里)
-1. [华为手机整体销量超越苹果](https://so.toutiao.com/search?keyword=华为手机整体销量超越苹果)
-1. [媒体：世界运转的格局变了](https://so.toutiao.com/search?keyword=媒体：世界运转的格局变了)
 1. [华为近期为何接连找明星代言](https://so.toutiao.com/search?keyword=华为近期为何接连找明星代言)
 1. [统计局答房地产恢复为何不及预期](https://so.toutiao.com/search?keyword=统计局答房地产恢复为何不及预期)
 1. [中央巡视组已进驻6家单位](https://so.toutiao.com/search?keyword=中央巡视组已进驻6家单位)
-1. [普京抵达北京哪些信息值得关注](https://so.toutiao.com/search?keyword=普京抵达北京哪些信息值得关注)
 1. [深交所辟谣近期对16个项目现场督导](https://so.toutiao.com/search?keyword=深交所辟谣近期对16个项目现场督导)
 1. [被狗咬女童方律师：狗主人被刑拘](https://so.toutiao.com/search?keyword=被狗咬女童方律师：狗主人被刑拘)
 1. [加沙浸信会医院遭袭至少500人死亡](https://so.toutiao.com/search?keyword=加沙浸信会医院遭袭至少500人死亡)
@@ -68,7 +89,6 @@
 1. [侯友宜柯文哲或亲自会面？柯办回应](https://so.toutiao.com/search?keyword=侯友宜柯文哲或亲自会面？柯办回应)
 1. [四川射洪给未牵绳遛狗者发狗绳嘴套](https://so.toutiao.com/search?keyword=四川射洪给未牵绳遛狗者发狗绳嘴套)
 1. [男子骑车被突然掉落的树枝砸倒](https://so.toutiao.com/search?keyword=男子骑车被突然掉落的树枝砸倒)
-1. [特斯拉车主多次别停他人 律师解读](https://so.toutiao.com/search?keyword=特斯拉车主多次别停他人+律师解读)
 1. [马英九抗议把台湾“武器化”思维](https://so.toutiao.com/search?keyword=马英九抗议把台湾“武器化”思维)
 1. [俄罗斯人来黑河不只吃早餐还输液](https://so.toutiao.com/search?keyword=俄罗斯人来黑河不只吃早餐还输液)
 1. [商务部回应美对华半导体出口管制](https://so.toutiao.com/search?keyword=商务部回应美对华半导体出口管制)
@@ -77,7 +97,6 @@
 1. [13家中企被美列入“实体清单”](https://so.toutiao.com/search?keyword=13家中企被美列入“实体清单”)
 1. [专家：美国股市正处于历史性泡沫中](https://so.toutiao.com/search?keyword=专家：美国股市正处于历史性泡沫中)
 1. [中国前三季度经济成绩单揭晓](https://so.toutiao.com/search?keyword=中国前三季度经济成绩单揭晓)
-1. [民众党若二选一就不必谈？侯办澄清](https://so.toutiao.com/search?keyword=民众党若二选一就不必谈？侯办澄清)
 1. [金融惠民助消费升温](https://so.toutiao.com/search?keyword=金融惠民助消费升温)
 1. [中俄元首会谈开始前俄方代表团入场](https://so.toutiao.com/search?keyword=中俄元首会谈开始前俄方代表团入场)
 1. [俄媒：普京访华体现对华高度重视](https://so.toutiao.com/search?keyword=俄媒：普京访华体现对华高度重视)
@@ -155,7 +174,6 @@
 1. [哈马斯建的加沙隧道如何令以军头疼](https://so.toutiao.com/search?keyword=哈马斯建的加沙隧道如何令以军头疼)
 1. [英伟达跌超4%](https://so.toutiao.com/search?keyword=英伟达跌超4%)
 1. [外交部回应日本歌手谷村新司去世](https://so.toutiao.com/search?keyword=外交部回应日本歌手谷村新司去世)
-1. [兽医称从业10年仍害怕罗威纳犬](https://so.toutiao.com/search?keyword=兽医称从业10年仍害怕罗威纳犬)
 1. [张若昀《庆余年》第二季杀青](https://so.toutiao.com/search?keyword=张若昀《庆余年》第二季杀青)
 1. [塞尔维亚是中国的铁杆朋友](https://so.toutiao.com/search?keyword=塞尔维亚是中国的铁杆朋友)
 1. [全力以赴保障粮食丰收](https://so.toutiao.com/search?keyword=全力以赴保障粮食丰收)
