--- a/archives/toutiao-search/2023-10-19.md
+++ b/archives/toutiao-search/2023-10-19.md
@@ -1,66 +1,76 @@
 # 2023-10-19
 
-共 107 条
+共 116 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Oct 19 2023 09:40:09 GMT+0800 (China Standard Time) -->
-1. [广州一宝马与出租相撞侧翻起火](https://so.toutiao.com/search?keyword=广州一宝马与出租相撞侧翻起火)
+<!-- 最后更新时间 Thu Oct 19 2023 10:14:02 GMT+0800 (China Standard Time) -->
 1. [普京访华的安保级别有多高](https://so.toutiao.com/search?keyword=普京访华的安保级别有多高)
+1. [日前首相：遗憾日本没参与一带一路](https://so.toutiao.com/search?keyword=日前首相：遗憾日本没参与一带一路)
 1. [全国秋粮收获已过七成](https://so.toutiao.com/search?keyword=全国秋粮收获已过七成)
-1. [王毅点评哈萨克斯坦记者中文](https://so.toutiao.com/search?keyword=王毅点评哈萨克斯坦记者中文)
-1. [堪比打印机 食堂大叔手写每周菜单](https://so.toutiao.com/search?keyword=堪比打印机+食堂大叔手写每周菜单)
+1. [又一象棋大师举报“棋坛乱象”](https://so.toutiao.com/search?keyword=又一象棋大师举报“棋坛乱象”)
+1. [法国前总理用中文幽默开场](https://so.toutiao.com/search?keyword=法国前总理用中文幽默开场)
 1. [碧桂园辟谣“创始人父女或已离境”](https://so.toutiao.com/search?keyword=碧桂园辟谣“创始人父女或已离境”)
+1. [各国记者“堆成山”抓拍普京出场](https://so.toutiao.com/search?keyword=各国记者“堆成山”抓拍普京出场)
+1. [学生模仿领导“视察” 校方回应](https://so.toutiao.com/search?keyword=学生模仿领导“视察”+校方回应)
+1. [男子在新疆拍到西伯利亚冷空气入侵](https://so.toutiao.com/search?keyword=男子在新疆拍到西伯利亚冷空气入侵)
+1. [王毅点评哈萨克斯坦记者中文](https://so.toutiao.com/search?keyword=王毅点评哈萨克斯坦记者中文)
+1. [加沙医院被导弹击中瞬间曝光](https://so.toutiao.com/search?keyword=加沙医院被导弹击中瞬间曝光)
+1. [拜登讲话用“911”提醒以色列](https://so.toutiao.com/search?keyword=拜登讲话用“911”提醒以色列)
+1. [韩媒：以色列的悲剧给韩带来的教训](https://so.toutiao.com/search?keyword=韩媒：以色列的悲剧给韩带来的教训)
+1. [曝欧盟内部因对巴以态度不同起矛盾](https://so.toutiao.com/search?keyword=曝欧盟内部因对巴以态度不同起矛盾)
+1. [以色列总理拥抱迎接拜登](https://so.toutiao.com/search?keyword=以色列总理拥抱迎接拜登)
+1. [父女俩时隔4个月相继成为大体老师](https://so.toutiao.com/search?keyword=父女俩时隔4个月相继成为大体老师)
+1. [曝威马仅剩817人 已停发工资4个月](https://so.toutiao.com/search?keyword=曝威马仅剩817人+已停发工资4个月)
 1. [以色列要求本国公民立即离开土耳其](https://so.toutiao.com/search?keyword=以色列要求本国公民立即离开土耳其)
+1. [合肥市区有野猪横穿马路被撞身亡](https://so.toutiao.com/search?keyword=合肥市区有野猪横穿马路被撞身亡)
+1. [iPhone15Plus价格暴降销量不理想](https://so.toutiao.com/search?keyword=iPhone15Plus价格暴降销量不理想)
+1. [广州一宝马与出租相撞侧翻起火](https://so.toutiao.com/search?keyword=广州一宝马与出租相撞侧翻起火)
+1. [云南一商城电梯坠落致3死17伤](https://so.toutiao.com/search?keyword=云南一商城电梯坠落致3死17伤)
+1. [黄果树景区通报游客拍照被大妈阻拦](https://so.toutiao.com/search?keyword=黄果树景区通报游客拍照被大妈阻拦)
+1. [于和伟晒自拍“显摆”手机](https://so.toutiao.com/search?keyword=于和伟晒自拍“显摆”手机)
+1. [云南坠落电梯是否超载？商户发声](https://so.toutiao.com/search?keyword=云南坠落电梯是否超载？商户发声)
+1. [美国升级AI芯片和半导体出口禁令](https://so.toutiao.com/search?keyword=美国升级AI芯片和半导体出口禁令)
+1. [游客天坛偶遇塞尔维亚总统夫人](https://so.toutiao.com/search?keyword=游客天坛偶遇塞尔维亚总统夫人)
+1. [夫妻带娃路过水果店拿走榴莲不付款](https://so.toutiao.com/search?keyword=夫妻带娃路过水果店拿走榴莲不付款)
+1. [美国向乌运送战术导弹系统 俄回应](https://so.toutiao.com/search?keyword=美国向乌运送战术导弹系统+俄回应)
+1. [碧桂园创始人杨国强再露面](https://so.toutiao.com/search?keyword=碧桂园创始人杨国强再露面)
+1. [堪比打印机 食堂大叔手写每周菜单](https://so.toutiao.com/search?keyword=堪比打印机+食堂大叔手写每周菜单)
+1. [以军完成对加沙地面进攻准备工作](https://so.toutiao.com/search?keyword=以军完成对加沙地面进攻准备工作)
+1. [塞尔维亚前总统：现在中国是希望](https://so.toutiao.com/search?keyword=塞尔维亚前总统：现在中国是希望)
+1. [英智库专家范智廉谈一带一路10周年](https://so.toutiao.com/search?keyword=英智库专家范智廉谈一带一路10周年)
+1. [华为近期为何接连找明星代言](https://so.toutiao.com/search?keyword=华为近期为何接连找明星代言)
+1. [原广东省卫计委主任陈元胜被查](https://so.toutiao.com/search?keyword=原广东省卫计委主任陈元胜被查)
+1. [拉布拉多疑似走丢咬起绳子递给路人](https://so.toutiao.com/search?keyword=拉布拉多疑似走丢咬起绳子递给路人)
+1. [智利总统购买冰墩墩和兔墩墩玩具](https://so.toutiao.com/search?keyword=智利总统购买冰墩墩和兔墩墩玩具)
+1. [男子捉奸后收情夫2.5万获刑将再审](https://so.toutiao.com/search?keyword=男子捉奸后收情夫2.5万获刑将再审)
+1. [电影《刀尖》定档11月24日](https://so.toutiao.com/search?keyword=电影《刀尖》定档11月24日)
+1. [俄罗斯外交部长拉夫罗夫访问朝鲜](https://so.toutiao.com/search?keyword=俄罗斯外交部长拉夫罗夫访问朝鲜)
+1. [女孩腹痛 医生切开阑尾有虫子游出](https://so.toutiao.com/search?keyword=女孩腹痛+医生切开阑尾有虫子游出)
+1. [婴儿遭遗弃 身上附一张纸和一百元](https://so.toutiao.com/search?keyword=婴儿遭遗弃+身上附一张纸和一百元)
+1. [埃及总统已同意开放拉法口岸](https://so.toutiao.com/search?keyword=埃及总统已同意开放拉法口岸)
+1. [拜登称31名美国人死于哈马斯袭击以](https://so.toutiao.com/search?keyword=拜登称31名美国人死于哈马斯袭击以)
+1. [统计局：我国人口质量改善速度更快](https://so.toutiao.com/search?keyword=统计局：我国人口质量改善速度更快)
+1. [普京此次中国之行有何意义](https://so.toutiao.com/search?keyword=普京此次中国之行有何意义)
+1. [江西明月山徒步失联女子遗体已找到](https://so.toutiao.com/search?keyword=江西明月山徒步失联女子遗体已找到)
+1. [面包车内改装吸尘器偷玉米6000斤](https://so.toutiao.com/search?keyword=面包车内改装吸尘器偷玉米6000斤)
+1. [刘芳菲从央视主持名单中消失](https://so.toutiao.com/search?keyword=刘芳菲从央视主持名单中消失)
 1. [巴以冲突已致双方超4900人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超4900人死亡)
 1. [医生解读女子闻袜子感染真菌肺炎](https://so.toutiao.com/search?keyword=医生解读女子闻袜子感染真菌肺炎)
-1. [日前首相：遗憾日本没参与一带一路](https://so.toutiao.com/search?keyword=日前首相：遗憾日本没参与一带一路)
-1. [加沙医院被导弹击中瞬间曝光](https://so.toutiao.com/search?keyword=加沙医院被导弹击中瞬间曝光)
-1. [韩媒：以色列的悲剧给韩带来的教训](https://so.toutiao.com/search?keyword=韩媒：以色列的悲剧给韩带来的教训)
-1. [法国前总理用中文幽默开场](https://so.toutiao.com/search?keyword=法国前总理用中文幽默开场)
-1. [拜登讲话用“911”提醒以色列](https://so.toutiao.com/search?keyword=拜登讲话用“911”提醒以色列)
-1. [又一象棋大师举报“棋坛乱象”](https://so.toutiao.com/search?keyword=又一象棋大师举报“棋坛乱象”)
-1. [学生模仿领导“视察” 校方回应](https://so.toutiao.com/search?keyword=学生模仿领导“视察”+校方回应)
-1. [各国记者“堆成山”抓拍普京出场](https://so.toutiao.com/search?keyword=各国记者“堆成山”抓拍普京出场)
 1. [圆通计划在哈萨克斯坦设立中亚总部](https://so.toutiao.com/search?keyword=圆通计划在哈萨克斯坦设立中亚总部)
 1. [4090显卡全面下架](https://so.toutiao.com/search?keyword=4090显卡全面下架)
-1. [iPhone15Plus价格暴降销量不理想](https://so.toutiao.com/search?keyword=iPhone15Plus价格暴降销量不理想)
-1. [云南一商城电梯坠落致3死17伤](https://so.toutiao.com/search?keyword=云南一商城电梯坠落致3死17伤)
 1. [伊朗外长呼吁对以色列实施石油禁运](https://so.toutiao.com/search?keyword=伊朗外长呼吁对以色列实施石油禁运)
-1. [曝威马仅剩817人 已停发工资4个月](https://so.toutiao.com/search?keyword=曝威马仅剩817人+已停发工资4个月)
-1. [云南坠落电梯是否超载？商户发声](https://so.toutiao.com/search?keyword=云南坠落电梯是否超载？商户发声)
-1. [以色列总理拥抱迎接拜登](https://so.toutiao.com/search?keyword=以色列总理拥抱迎接拜登)
 1. [警方通报“女子疑醉酒当街遭性侵”](https://so.toutiao.com/search?keyword=警方通报“女子疑醉酒当街遭性侵”)
-1. [智利总统购买冰墩墩和兔墩墩玩具](https://so.toutiao.com/search?keyword=智利总统购买冰墩墩和兔墩墩玩具)
-1. [美国向乌运送战术导弹系统 俄回应](https://so.toutiao.com/search?keyword=美国向乌运送战术导弹系统+俄回应)
-1. [男子在新疆拍到西伯利亚冷空气入侵](https://so.toutiao.com/search?keyword=男子在新疆拍到西伯利亚冷空气入侵)
-1. [父女俩时隔4个月相继成为大体老师](https://so.toutiao.com/search?keyword=父女俩时隔4个月相继成为大体老师)
 1. [布兰妮自曝曾为贾老板堕胎](https://so.toutiao.com/search?keyword=布兰妮自曝曾为贾老板堕胎)
-1. [美国升级AI芯片和半导体出口禁令](https://so.toutiao.com/search?keyword=美国升级AI芯片和半导体出口禁令)
-1. [夫妻带娃路过水果店拿走榴莲不付款](https://so.toutiao.com/search?keyword=夫妻带娃路过水果店拿走榴莲不付款)
-1. [华为近期为何接连找明星代言](https://so.toutiao.com/search?keyword=华为近期为何接连找明星代言)
-1. [游客天坛偶遇塞尔维亚总统夫人](https://so.toutiao.com/search?keyword=游客天坛偶遇塞尔维亚总统夫人)
 1. [男子回家邻居孩子冲出来叫爸爸](https://so.toutiao.com/search?keyword=男子回家邻居孩子冲出来叫爸爸)
-1. [合肥市区有野猪横穿马路被撞身亡](https://so.toutiao.com/search?keyword=合肥市区有野猪横穿马路被撞身亡)
 1. [媒体：拜登踏上中东“囧途”](https://so.toutiao.com/search?keyword=媒体：拜登踏上中东“囧途”)
-1. [于和伟晒自拍“显摆”手机](https://so.toutiao.com/search?keyword=于和伟晒自拍“显摆”手机)
-1. [拉布拉多疑似走丢咬起绳子递给路人](https://so.toutiao.com/search?keyword=拉布拉多疑似走丢咬起绳子递给路人)
-1. [江西明月山徒步失联女子遗体已找到](https://so.toutiao.com/search?keyword=江西明月山徒步失联女子遗体已找到)
-1. [黄果树景区通报游客拍照被大妈阻拦](https://so.toutiao.com/search?keyword=黄果树景区通报游客拍照被大妈阻拦)
-1. [塞尔维亚前总统：现在中国是希望](https://so.toutiao.com/search?keyword=塞尔维亚前总统：现在中国是希望)
-1. [婴儿遭遗弃 身上附一张纸和一百元](https://so.toutiao.com/search?keyword=婴儿遭遗弃+身上附一张纸和一百元)
-1. [电影《刀尖》定档11月24日](https://so.toutiao.com/search?keyword=电影《刀尖》定档11月24日)
 1. [全网拉布拉多都在进行安全教育](https://so.toutiao.com/search?keyword=全网拉布拉多都在进行安全教育)
-1. [男子捉奸后收情夫2.5万获刑将再审](https://so.toutiao.com/search?keyword=男子捉奸后收情夫2.5万获刑将再审)
 1. [以色列轰炸黎巴嫩南部边界地区](https://so.toutiao.com/search?keyword=以色列轰炸黎巴嫩南部边界地区)
-1. [普京此次中国之行有何意义](https://so.toutiao.com/search?keyword=普京此次中国之行有何意义)
-1. [英智库专家范智廉谈一带一路10周年](https://so.toutiao.com/search?keyword=英智库专家范智廉谈一带一路10周年)
 1. [狂犬病潜伏期长达十几年？假的](https://so.toutiao.com/search?keyword=狂犬病潜伏期长达十几年？假的)
 1. [媒体：巴以冲突或引发文化遗产灾难](https://so.toutiao.com/search?keyword=媒体：巴以冲突或引发文化遗产灾难)
 1. [巴勒斯坦：我们的人民不下跪不投降](https://so.toutiao.com/search?keyword=巴勒斯坦：我们的人民不下跪不投降)
 1. [加沙医院遭袭 多个国家和组织谴责](https://so.toutiao.com/search?keyword=加沙医院遭袭+多个国家和组织谴责)
 1. [美国财政部宣布制裁哈马斯成员](https://so.toutiao.com/search?keyword=美国财政部宣布制裁哈马斯成员)
 1. [俄罗斯人来黑河不只吃早餐还输液](https://so.toutiao.com/search?keyword=俄罗斯人来黑河不只吃早餐还输液)
-1. [俄罗斯外交部长拉夫罗夫访问朝鲜](https://so.toutiao.com/search?keyword=俄罗斯外交部长拉夫罗夫访问朝鲜)
 1. [男子走失25年回家：我不值100万](https://so.toutiao.com/search?keyword=男子走失25年回家：我不值100万)
 1. [苏醒让王栎鑫帮忙看离婚协议](https://so.toutiao.com/search?keyword=苏醒让王栎鑫帮忙看离婚协议)
 1. [支原体肺炎和支气管肺炎有何区别](https://so.toutiao.com/search?keyword=支原体肺炎和支气管肺炎有何区别)
@@ -92,7 +102,6 @@
 1. [第一次这么不想学习冷知识](https://so.toutiao.com/search?keyword=第一次这么不想学习冷知识)
 1. [居民收入持续增长 消费恢复了吗](https://so.toutiao.com/search?keyword=居民收入持续增长+消费恢复了吗)
 1. [100元吃遍东北早市博主道歉](https://so.toutiao.com/search?keyword=100元吃遍东北早市博主道歉)
-1. [女孩腹痛 医生切开阑尾有虫子游出](https://so.toutiao.com/search?keyword=女孩腹痛+医生切开阑尾有虫子游出)
 1. [网传某私募建议客户全部赎回](https://so.toutiao.com/search?keyword=网传某私募建议客户全部赎回)
 1. [英伟达RTX4090显卡或对华禁售](https://so.toutiao.com/search?keyword=英伟达RTX4090显卡或对华禁售)
 1. [哈马斯证实一高级指挥官死亡](https://so.toutiao.com/search?keyword=哈马斯证实一高级指挥官死亡)
